Add color pallets to colors and to css file

--- a/index.html
+++ b/index.html
@@ -11,77 +11,67 @@
 
 <body>
     <div class="main_centered">
-        <div class="color_red">
-            <div class="box_left">
-                <div class="box_left_titlebar">spotx-web-nosdk</div>
-                <div class="box_left_versionString">2.3.0</div>
-            </div>
-            <div class="box_right">
-                <div class="box_right_titlebar">spotx-web-nosdk</div>
-                <div class="box_right_versionString">2.2.0</div>
-            </div>
-        </div>
-        <div class="box_left">
-            <div class="box_left_titlebar">spotx-web-nosdk</div>
+        <div class="box_left red redbackgroundlight">
+            <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
             <div class="box_left_versionString">2.3.0</div>
         </div>
-        <div class="box_right">
-            <div class="box_right_titlebar">spotx-web-nosdk</div>
+        <div class="box_right red redbackgroundlight">
+            <div class="box_right_titlebar redbackground">spotx-web-nosdk</div>
             <div class="box_right_versionString">2.2.0</div>
         </div>
 
-        <div class="box_left">
-            <div class="box_left_titlebar">spotx-nosdk-controller</div>
+        <div class="box_left orange orangebackgroundlight">
+            <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
             <div class="box_left_versionString">1.1.0</div>
         </div>
-        <div class="box_right">
-            <div class="box_right_titlebar">spotx-nosdk-controller</div>
+        <div class="box_right orange orangebackgroundlight">
+            <div class="box_right_titlebar orangebackground">spotx-nosdk-controller</div>
             <div class="box_right_versionString">1.0.3</div>
         </div>
 
-        <div class="box_left">
-            <div class="box_left_titlebar">spotx-sdk-android</div>
+        <div class="box_left peach peachbackgroundlight">
+            <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
             <div class="box_left_versionString">4.3.0</div>
         </div>
-        <div class="box_right">
-            <div class="box_right_titlebar">spotx-sdk-android</div>
+        <div class="box_right peach peachbackgroundlight">
+            <div class="box_right_titlebar peachbackground">spotx-sdk-android</div>
             <div class="box_right_versionString">4.2.0</div>
         </div>
 
-        <div class="box_left">
-            <div class="box_left_titlebar">spotx-sdk-ios</div>
+        <div class="box_left yellow yellowbackgroundlight">
+            <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
             <div class="box_left_versionString">4.2.0</div>
         </div>
-        <div class="box_right">
-            <div class="box_right_titlebar">spotx-sdk-ios</div>
+        <div class="box_right yellow yellowbackgroundlight">
+            <div class="box_right_titlebar yellowbackground">spotx-sdk-ios</div>
             <div class="box_right_versionString">4.1.0</div>
         </div>
 
-        <div class="box_left">
-            <div class="box_left_titlebar">spotx-sdk-avplayer</div>
+        <div class="box_left bluegreen bluegreenbackgroundlight">
+            <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
             <div class="box_left_versionString">1.6.0</div>
         </div>
-        <div class="box_right">
-            <div class="box_right_titlebar">spotx-sdk-avplayer</div>
+        <div class="box_right bluegreen bluegreenbackgroundlight">
+            <div class="box_right_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
             <div class="box_right_versionString">1.5.3</div>
         </div>
 
-        <div class="box_left">
-            <div class="box_left_titlebar">spotx-mobile-ios</div>
+        <div class="box_left teal tealbackgroundlight">
+            <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
             <div class="box_left_versionString">new</div>
         </div>
-        <div class="box_right">
-            <div class="box_right_titlebar">spotx-mobile-ios</div>
+        <div class="box_right teal tealbackgroundlight">
+            <div class="box_right_titlebar tealbackground">spotx-mobile-ios</div>
             <div class="box_right_versionString">current</div>
         </div>
 
-        <div class="box_left">
-            <div class="box_left_titlebar">spotx-mobile-android</div>
-            <div class="box_left_versionString">new</div>
+        <div class="box_left blue bluebackgroundlight">
+            <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
+            <div class="box_left_versionString bluebackgroundlight">new</div>
         </div>
-        <div class="box_right">
-            <div class="box_right_titlebar">spotx-mobile-android</div>
-            <div class="box_right_versionString">current</div>
+        <div class="box_right blue bluebackgroundlight">
+            <div class="box_right_titlebar bluebackground">spotx-mobile-android</div>
+            <div class="box_right_versionString bluebackgroundlight">current</div>
         </div>
     </div>
 </body>
