--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
     <div class="main_centered">
+        <div class="box_left">left</div>
+        <div class="box_right">right</div>
         <div class="box_left red redbackgroundlight">
             <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
             <div class="box_left_versionString">2.3.0</div>
