--- a/website/index.html
+++ b/website/index.html
@@ -11,67 +11,81 @@
 
 <body>
     <div class="main_centered">
-        <div class="box_left red redbackgroundlight">
-            <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
-            <div class="box_left_versionString">2.0.3</div>
-        </div>
-        <div class="box_right red redbackgroundlight">
-            <div class="box_right_titlebar redbackground">spotx-web-nosdk</div>
-            <div class="box_right_versionString">2.0.2</div>
-        </div>
-
-        <div class="box_left orange orangebackgroundlight">
-            <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
-            <div class="box_left_versionString">1.1.2</div>
-        </div>
-        <div class="box_right orange orangebackgroundlight">
-            <div class="box_right_titlebar orangebackground">spotx-nosdk-controller</div>
-            <div class="box_right_versionString">1.1.1</div>
+        <div class="rowdiv">
+            <div class="box_left red redbackgroundlight">
+                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+                <div class="box_left_versionString">2.0.2<br>2.0.1<br>2.0.0<br>1.5.0<br>1.4.1<br>1.4.0<br>1.3.1<br>1.3.0<br>1.2.1<br>1.2.0<br>1.1.0<br>1.0.0</div>
+            </div>
+            <div class="box_right red redbackgroundlight">
+                <div class="box_right_titlebar redbackground">spotx-web-nosdk</div>
+                <div class="box_right_versionString">2.0.3</div>
+            </div>
         </div>
 
-        <div class="box_left peach peachbackgroundlight">
-            <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
-            <div class="box_left_versionString">4.3.1</div>
-        </div>
-        <div class="box_right peach peachbackgroundlight">
-            <div class="box_right_titlebar peachbackground">spotx-sdk-android</div>
-            <div class="box_right_versionString">4.3.0</div>
-        </div>
-
-        <div class="box_left yellow yellowbackgroundlight">
-            <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
-            <div class="box_left_versionString">4.2.0</div>
-        </div>
-        <div class="box_right yellow yellowbackgroundlight">
-            <div class="box_right_titlebar yellowbackground">spotx-sdk-ios</div>
-            <div class="box_right_versionString">4.1.0</div>
+        <div class="rowdiv">
+            <div class="box_left orange orangebackgroundlight">
+                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_left_versionString">1.1.1<br>1.1.0<br>1.0.3<br>1.0.2<br>1.0.1<br>1.0.0</div>
+            </div>
+            <div class="box_right orange orangebackgroundlight">
+                <div class="box_right_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_right_versionString">1.1.2</div>
+            </div>
         </div>
 
-        <div class="box_left bluegreen bluegreenbackgroundlight">
-            <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
-            <div class="box_left_versionString">1.6.0</div>
-        </div>
-        <div class="box_right bluegreen bluegreenbackgroundlight">
-            <div class="box_right_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
-            <div class="box_right_versionString">1.5.3</div>
-        </div>
-
-        <div class="box_left teal tealbackgroundlight">
-            <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
-            <div class="box_left_versionString">new</div>
-        </div>
-        <div class="box_right teal tealbackgroundlight">
-            <div class="box_right_titlebar tealbackground">spotx-mobile-ios</div>
-            <div class="box_right_versionString">current</div>
+        <div class="rowdiv">
+            <div class="box_left peach peachbackgroundlight">
+                <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
+                <div class="box_left_versionString">4.3.0<br>4.2.0<br>4.1.1<br>4.1.0<br>4.0.1<br>4.0.0<br>3.4.0<br>3.3.1<br>3.3.0<br>3.2.0<br>3.1.1<br>3.0.5<br>3.0.4<br>3.0.3<br>3.0.2<br>3.0.1<br>3.0.0<br>2.0.0</div>
+            </div>
+            <div class="box_right peach peachbackgroundlight">
+                <div class="box_right_titlebar peachbackground">spotx-sdk-android</div>
+                <div class="box_right_versionString">4.3.1</div>
+            </div>
         </div>
 
-        <div class="box_left blue bluebackgroundlight">
-            <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
-            <div class="box_left_versionString bluebackgroundlight">new</div>
+        <div class="rowdiv">
+            <div class="box_left yellow yellowbackgroundlight">
+                <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
+                <div class="box_left_versionString">4.1.0<br>4.0.3<br>4.0.2<br>4.0.1<br>4.0.0<br>2.3.3<br>2.3.2<br>2.2.6<br>2.2.5<br>2.2.4<br>2.2.3<br>2.2.2<br>2.2.1<br>2.2.0<br>2.1.0<br>2.0.0</div>
+            </div>
+            <div class="box_right yellow yellowbackgroundlight">
+                <div class="box_right_titlebar yellowbackground">spotx-sdk-ios</div>
+                <div class="box_right_versionString">4.2.0</div>
+            </div>
         </div>
-        <div class="box_right blue bluebackgroundlight">
-            <div class="box_right_titlebar bluebackground">spotx-mobile-android</div>
-            <div class="box_right_versionString bluebackgroundlight">current</div>
+
+        <div class="rowdiv">
+            <div class="box_left bluegreen bluegreenbackgroundlight">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
+                <div class="box_left_versionString">1.5.3<br>1.5.2<br>1.5.1<br>1.5.0<br>1.4.0<br>1.3.2<br>1.2.0<br>1.1.0<br>1.0.0</div>
+            </div>
+            <div class="box_right bluegreen bluegreenbackgroundlight">
+                <div class="box_right_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
+                <div class="box_right_versionString">1.6.0</div>
+            </div>
+        </div>
+
+        <div class="rowdiv">
+            <div class="box_left teal tealbackgroundlight">
+                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
+                <div class="box_left_versionString">new</div>
+            </div>
+            <div class="box_right teal tealbackgroundlight">
+                <div class="box_right_titlebar tealbackground">spotx-mobile-ios</div>
+                <div class="box_right_versionString">current</div>
+            </div>
+        </div>
+
+        <div>
+            <div class="box_left blue bluebackgroundlight">
+                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
+                <div class="box_left_versionString bluebackgroundlight">new</div>
+            </div>
+            <div class="box_right blue bluebackgroundlight">
+                <div class="box_right_titlebar bluebackground">spotx-mobile-android</div>
+                <div class="box_right_versionString bluebackgroundlight">current</div>
+            </div>
         </div>
     </div>
 </body>
