Add mobile reporting app versions

--- a/website/index.html
+++ b/website/index.html
@@ -69,22 +69,22 @@
         <div class="rowdiv">
             <div class="box_left teal tealbackgroundlight">
                 <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
-                <div class="box_left_versionString">new</div>
+                <div class="box_left_versionString">2.1.0<br>2.0.0<br>1.0.0</div>
             </div>
             <div class="box_right teal tealbackgroundlight">
                 <div class="box_right_titlebar tealbackground">spotx-mobile-ios</div>
-                <div class="box_right_versionString">current</div>
+                <div class="box_right_versionString">2.1.1</div>
             </div>
         </div>
 
         <div>
             <div class="box_left blue bluebackgroundlight">
                 <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
-                <div class="box_left_versionString bluebackgroundlight">new</div>
+                <div class="box_left_versionString bluebackgroundlight">1.0.0</div>
             </div>
             <div class="box_right blue bluebackgroundlight">
                 <div class="box_right_titlebar bluebackground">spotx-mobile-android</div>
-                <div class="box_right_versionString bluebackgroundlight">current</div>
+                <div class="box_right_versionString bluebackgroundlight">1.0.1</div>
             </div>
         </div>
     </div>
