Add column titles, start work on projects folders

--- a/website/spotx-web-nosdk/index.html
+++ b/website/spotx-web-nosdk/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Ninja | Products Dashboard</title>
+    <title>Ninja | spotx-web-nosdk</title>
     <meta name="description" content="Working head of Team Ninja products and next release version">
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Dosis" rel="stylesheet">
     <link rel="stylesheet" href="ninja.css">
