Add spotx-web-nosdk page

--- a/website/index.html
+++ b/website/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="main_centered">
         <div class="rowdiv">
-            <div class="box_left clear column_titles">
+            <div class="box_left clear column_titles_center">
                 PREVIOUS VERSIONS
             </div>
-            <div class="box_right clear column_titles">
+            <div class="box_right clear column_titles_center">
                 CURRENT VERSION
             </div>
         </div>
@@ -39,7 +39,7 @@
                     1.0.0
                 </div>
             </div>
-            <div class="box_right red redbackgroundlight">
+            <div class="box_right red redbackgroundlight bold">
                 <div class="box_right_titlebar redbackground">spotx-web-nosdk</div>
                 <div class="box_right_versionString">2.0.3</div>
             </div>
@@ -57,7 +57,7 @@
                     1.0.0
                 </div>
             </div>
-            <div class="box_right orange orangebackgroundlight">
+            <div class="box_right orange orangebackgroundlight bold">
                 <div class="box_right_titlebar orangebackground">spotx-nosdk-controller</div>
                 <div class="box_right_versionString">1.1.2</div>
             </div>
@@ -87,7 +87,7 @@
                     2.0.0
                 </div>
             </div>
-            <div class="box_right peach peachbackgroundlight">
+            <div class="box_right peach peachbackgroundlight bold">
                 <div class="box_right_titlebar peachbackground">spotx-sdk-android</div>
                 <div class="box_right_versionString">4.3.1</div>
             </div>
@@ -115,7 +115,7 @@
                     2.0.0
                 </div>
             </div>
-            <div class="box_right yellow yellowbackgroundlight">
+            <div class="box_right yellow yellowbackgroundlight bold">
                 <div class="box_right_titlebar yellowbackground">spotx-sdk-ios</div>
                 <div class="box_right_versionString">4.2.0</div>
             </div>
@@ -136,7 +136,7 @@
                     1.0.0
                 </div>
             </div>
-            <div class="box_right bluegreen bluegreenbackgroundlight">
+            <div class="box_right bluegreen bluegreenbackgroundlight bold">
                 <div class="box_right_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_right_versionString">1.6.0</div>
             </div>
@@ -151,7 +151,7 @@
                     1.0.0
                 </div>
             </div>
-            <div class="box_right teal tealbackgroundlight">
+            <div class="box_right teal tealbackgroundlight bold">
                 <div class="box_right_titlebar tealbackground">spotx-mobile-ios</div>
                 <div class="box_right_versionString">2.1.1</div>
             </div>
@@ -162,7 +162,7 @@
                 <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
                 <div class="box_left_versionString bluebackgroundlight">1.0.0</div>
             </div>
-            <div class="box_right blue bluebackgroundlight">
+            <div class="box_right blue bluebackgroundlight bold">
                 <div class="box_right_titlebar bluebackground">spotx-mobile-android</div>
                 <div class="box_right_versionString bluebackgroundlight">
                     1.0.1
