--- a/website/spotx-mobile-android/index.html
+++ b/website/spotx-mobile-android/index.html
@@ -27,139 +27,7 @@
             <div class="box_full blue bluebackgroundlight bold">
                 <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
                 <div class="box_left_versionString">
-                    2.0.3
-                </div>
-                <div class="box_left_versionString package_description blueborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full blue bluebackgroundlight">
-                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
-                <div class="box_left_versionString">
-                    2.0.2
-                </div>
-                <div class="box_left_versionString package_description blueborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full blue bluebackgroundlight">
-                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
-                <div class="box_left_versionString">
-                    2.0.1
-                </div>
-                <div class="box_left_versionString package_description blueborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full blue bluebackgroundlight">
-                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
-                <div class="box_left_versionString">
-                    2.0.0
-                </div>
-                <div class="box_left_versionString package_description blueborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full blue bluebackgroundlight">
-                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
-                <div class="box_left_versionString">
-                    1.5.0
-                </div>
-                <div class="box_left_versionString package_description blueborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full blue bluebackgroundlight">
-                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
-                <div class="box_left_versionString">
-                    1.4.1
-                </div>
-                <div class="box_left_versionString package_description blueborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full blue bluebackgroundlight">
-                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
-                <div class="box_left_versionString">
-                    1.4.0
-                </div>
-                <div class="box_left_versionString package_description blueborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full blue bluebackgroundlight">
-                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
-                <div class="box_left_versionString">
-                    1.3.1
-                </div>
-                <div class="box_left_versionString package_description blueborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full blue bluebackgroundlight">
-                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
-                <div class="box_left_versionString">
-                    1.3.0
-                </div>
-                <div class="box_left_versionString package_description blueborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full blue bluebackgroundlight">
-                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
-                <div class="box_left_versionString">
-                    1.2.1
-                </div>
-                <div class="box_left_versionString package_description blueborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full blue bluebackgroundlight">
-                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
-                <div class="box_left_versionString">
-                    1.2.0
-                </div>
-                <div class="box_left_versionString package_description blueborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full blue bluebackgroundlight">
-                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
-                <div class="box_left_versionString">
-                    1.1.0
+                    1.0.1
                 </div>
                 <div class="box_left_versionString package_description blueborderlight">
                     <ul>
@@ -175,10 +43,11 @@
                 </div>
                 <div class="box_left_versionString package_description blueborderlight">
                     <ul>
-                        <li>TODO</li>
+                        <li>Initial relase of SpotX Mobile for Android</li>
                     </ul>
                 </div>
             </div>
+
         </div>
     </div>
 </body>
