Add background tile image

--- a/website/spotx-mobile-ios/index.html
+++ b/website/spotx-mobile-ios/index.html
@@ -27,31 +27,7 @@
             <div class="box_full teal tealbackgroundlight bold">
                 <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
                 <div class="box_left_versionString">
-                    2.0.3
-                </div>
-                <div class="box_left_versionString package_description tealborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full teal tealbackgroundlight">
-                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
-                <div class="box_left_versionString">
-                    2.0.2
-                </div>
-                <div class="box_left_versionString package_description tealborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full teal tealbackgroundlight">
-                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
-                <div class="box_left_versionString">
-                    2.0.1
+                    2.1.0
                 </div>
                 <div class="box_left_versionString package_description tealborderlight">
                     <ul>
@@ -75,107 +51,11 @@
             <div class="box_full teal tealbackgroundlight">
                 <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
                 <div class="box_left_versionString">
-                    1.5.0
-                </div>
-                <div class="box_left_versionString package_description tealborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full teal tealbackgroundlight">
-                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
-                <div class="box_left_versionString">
-                    1.4.1
-                </div>
-                <div class="box_left_versionString package_description tealborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full teal tealbackgroundlight">
-                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
-                <div class="box_left_versionString">
-                    1.4.0
-                </div>
-                <div class="box_left_versionString package_description tealborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full teal tealbackgroundlight">
-                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
-                <div class="box_left_versionString">
-                    1.3.1
-                </div>
-                <div class="box_left_versionString package_description tealborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full teal tealbackgroundlight">
-                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
-                <div class="box_left_versionString">
-                    1.3.0
-                </div>
-                <div class="box_left_versionString package_description tealborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full teal tealbackgroundlight">
-                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
-                <div class="box_left_versionString">
-                    1.2.1
-                </div>
-                <div class="box_left_versionString package_description tealborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full teal tealbackgroundlight">
-                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
-                <div class="box_left_versionString">
-                    1.2.0
-                </div>
-                <div class="box_left_versionString package_description tealborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full teal tealbackgroundlight">
-                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
-                <div class="box_left_versionString">
-                    1.1.0
-                </div>
-                <div class="box_left_versionString package_description tealborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full teal tealbackgroundlight">
-                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
-                <div class="box_left_versionString">
                     1.0.0
                 </div>
                 <div class="box_left_versionString package_description tealborderlight">
                     <ul>
-                        <li>TODO</li>
+                        <li>Initial release of Mobile Reporting App for iOS.</li>
                     </ul>
                 </div>
             </div>
