Update links to project pages

--- a/website/index.html
+++ b/website/index.html
@@ -23,7 +23,9 @@
 
         <div class="rowdiv">
             <div class="box_left red redbackgroundlight">
-                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+                <div class="box_left_titlebar redbackground">
+                    <a href="spotx-web-nosdk/index.html">spotx-web-nosdk</a>
+                </div>
                 <div class="box_left_versionString">
                     2.0.2<br>
                     2.0.1<br>
@@ -40,14 +42,18 @@
                 </div>
             </div>
             <div class="box_right red redbackgroundlight bold">
-                <div class="box_right_titlebar redbackground">spotx-web-nosdk</div>
+                <div class="box_right_titlebar redbackground">
+                    <a href="spotx-web-nosdk/index.html">spotx-web-nosdk</a>
+                </div>
                 <div class="box_right_versionString">2.0.3</div>
             </div>
         </div>
 
         <div class="rowdiv">
             <div class="box_left orange orangebackgroundlight">
-                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_left_titlebar orangebackground">
+                    <a href="spotx-nosdk-controller/index.html">spotx-nosdk-controller</a>
+                </div>
                 <div class="box_left_versionString">
                     1.1.1<br>
                     1.1.0<br>
@@ -58,14 +64,18 @@
                 </div>
             </div>
             <div class="box_right orange orangebackgroundlight bold">
-                <div class="box_right_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_right_titlebar orangebackground">
+                    <a href="spotx-nosdk-controller/index.html">spotx-nosdk-controller</a>
+                </div>
                 <div class="box_right_versionString">1.1.2</div>
             </div>
         </div>
 
         <div class="rowdiv">
             <div class="box_left peach peachbackgroundlight">
-                <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
+                <div class="box_left_titlebar peachbackground">
+                    <a href="spotx-sdk-android/index.html">spotx-sdk-android</a>
+                </div>
                 <div class="box_left_versionString">
                     4.3.0<br>
                     4.2.0<br>
@@ -88,14 +98,18 @@
                 </div>
             </div>
             <div class="box_right peach peachbackgroundlight bold">
-                <div class="box_right_titlebar peachbackground">spotx-sdk-android</div>
+                <div class="box_right_titlebar peachbackground">
+                    <a href="spotx-sdk-android/index.html">spotx-sdk-android</a>
+                </div>
                 <div class="box_right_versionString">4.3.1</div>
             </div>
         </div>
 
         <div class="rowdiv">
             <div class="box_left yellow yellowbackgroundlight">
-                <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
+                <div class="box_left_titlebar yellowbackground">
+                    <a href="spotx-sdk-ios/index.html">spotx-sdk-ios</a>
+                </div>
                 <div class="box_left_versionString">
                     4.1.0<br>
                     4.0.3<br>
@@ -116,14 +130,18 @@
                 </div>
             </div>
             <div class="box_right yellow yellowbackgroundlight bold">
-                <div class="box_right_titlebar yellowbackground">spotx-sdk-ios</div>
+                <div class="box_right_titlebar yellowbackground">
+                    <a href="spotx-sdk-ios/index.html">spotx-sdk-ios</a>
+                </div>
                 <div class="box_right_versionString">4.2.0</div>
             </div>
         </div>
 
         <div class="rowdiv">
             <div class="box_left bluegreen bluegreenbackgroundlight">
-                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
+                <div class="box_left_titlebar bluegreenbackground">
+                    <a href="spotx-sdk-avplayer/index.html">spotx-sdk-avplayer</a>
+                </div>
                 <div class="box_left_versionString">
                     1.5.3<br>
                     1.5.2<br>
@@ -137,14 +155,18 @@
                 </div>
             </div>
             <div class="box_right bluegreen bluegreenbackgroundlight bold">
-                <div class="box_right_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
+                <div class="box_right_titlebar bluegreenbackground">
+                    <a href="spotx-sdk-avplayer/index.html">spotx-sdk-avplayer</a>
+                </div>
                 <div class="box_right_versionString">1.6.0</div>
             </div>
         </div>
 
         <div class="rowdiv">
             <div class="box_left teal tealbackgroundlight">
-                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
+                <div class="box_left_titlebar tealbackground">
+                    <a href="spotx-mobile-ios/index.html">spotx-mobile-ios</a>
+                </div>
                 <div class="box_left_versionString">
                     2.1.0<br>
                     2.0.0<br>
@@ -152,18 +174,24 @@
                 </div>
             </div>
             <div class="box_right teal tealbackgroundlight bold">
-                <div class="box_right_titlebar tealbackground">spotx-mobile-ios</div>
+                <div class="box_right_titlebar tealbackground">
+                    <a href="spotx-mobile-ios/index.html">spotx-mobile-ios</a>
+                </div>
                 <div class="box_right_versionString">2.1.1</div>
             </div>
         </div>
 
         <div>
             <div class="box_left blue bluebackgroundlight">
-                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
+                <div class="box_left_titlebar bluebackground">
+                    <a href="spotx-mobile-android/index.html">spotx-mobile-android</a>
+                </div>
                 <div class="box_left_versionString bluebackgroundlight">1.0.0</div>
             </div>
             <div class="box_right blue bluebackgroundlight bold">
-                <div class="box_right_titlebar bluebackground">spotx-mobile-android</div>
+                <div class="box_right_titlebar bluebackground">
+                    <a href="spotx-mobile-android/index.html">spotx-mobile-android</a>
+                </div>
                 <div class="box_right_versionString bluebackgroundlight">
                     1.0.1
                 </div>
