Update css coloring for each product

--- a/website/spotx-mobile-android/index.html
+++ b/website/spotx-mobile-android/index.html
@@ -17,8 +17,8 @@
             </div>
         </div>
         <div class="rowdiv">
-            <div class="box_left clear column_titles_left">
-                spotx-mobile-android RELEASES
+            <div class="box_left clear column_titles_left blue">
+                <b>spotx-mobile-android RELEASES</b>
             </div>
         </div>
 
