--- a/website/spotx-mobile-ios/index.html
+++ b/website/spotx-mobile-ios/index.html
@@ -17,14 +17,26 @@
             </div>
         </div>
         <div class="rowdiv">
-            <div class="box_left clear column_titles_left">
-                spotx-mobile-ios RELEASES
+            <div class="box_left clear column_titles_left teal">
+                <b>spotx-mobile-ios RELEASES</b>
             </div>
         </div>
 
 
         <div class="rowdiv">
             <div class="box_full teal tealbackgroundlight bold">
+                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
+                <div class="box_left_versionString">
+                    2.1.1
+                </div>
+                <div class="box_left_versionString package_description tealborderlight">
+                    <ul>
+                        <li>TODO</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full teal tealbackgroundlight">
                 <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
                 <div class="box_left_versionString">
                     2.1.0
