--- a/website/spotx-nosdk-controller/index.html
+++ b/website/spotx-nosdk-controller/index.html
@@ -17,8 +17,8 @@
             </div>
         </div>
         <div class="rowdiv">
-            <div class="box_left clear column_titles_left">
-                spotx-nosdk-controller RELEASES
+            <div class="box_left clear column_titles_left orange">
+                <b>spotx-nosdk-controller RELEASES</b>
             </div>
         </div>
 
