--- a/website/spotx-sdk-android/index.html
+++ b/website/spotx-sdk-android/index.html
@@ -17,8 +17,8 @@
             </div>
         </div>
         <div class="rowdiv">
-            <div class="box_left clear column_titles_left">
-                spotx-sdk-android RELEASES
+            <div class="box_left clear column_titles_left peach">
+                <b>spotx-sdk-android RELEASES</b>
             </div>
         </div>
 
