--- a/website/spotx-web-nosdk/index.html
+++ b/website/spotx-web-nosdk/index.html
@@ -17,8 +17,8 @@
             </div>
         </div>
         <div class="rowdiv">
-            <div class="box_left clear column_titles_left">
-                spotx-web-nosdk RELEASES
+            <div class="box_left clear column_titles_left red">
+                <b>spotx-web-nosdk RELEASES</b>
             </div>
         </div>
 
