Update for spotx-sdk-avplayer 1.6.0 release

--- a/website/spotx-nosdk-controller/index.html
+++ b/website/spotx-nosdk-controller/index.html
@@ -27,7 +27,7 @@
             <div class="box_full orange orangebackgroundlight bold">
                 <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
                 <div class="box_left_versionString">
-                    2.0.3
+                    1.1.2
                 </div>
                 <div class="box_left_versionString package_description orangeborderlight">
                     <ul>
@@ -39,115 +39,7 @@
             <div class="box_full orange orangebackgroundlight">
                 <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
                 <div class="box_left_versionString">
-                    2.0.2
-                </div>
-                <div class="box_left_versionString package_description orangeborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full orange orangebackgroundlight">
-                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
-                <div class="box_left_versionString">
-                    2.0.1
-                </div>
-                <div class="box_left_versionString package_description orangeborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full orange orangebackgroundlight">
-                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
-                <div class="box_left_versionString">
-                    2.0.0
-                </div>
-                <div class="box_left_versionString package_description orangeborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full orange orangebackgroundlight">
-                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
-                <div class="box_left_versionString">
-                    1.5.0
-                </div>
-                <div class="box_left_versionString package_description orangeborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full orange orangebackgroundlight">
-                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
-                <div class="box_left_versionString">
-                    1.4.1
-                </div>
-                <div class="box_left_versionString package_description orangeborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full orange orangebackgroundlight">
-                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
-                <div class="box_left_versionString">
-                    1.4.0
-                </div>
-                <div class="box_left_versionString package_description orangeborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full orange orangebackgroundlight">
-                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
-                <div class="box_left_versionString">
-                    1.3.1
-                </div>
-                <div class="box_left_versionString package_description orangeborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full orange orangebackgroundlight">
-                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
-                <div class="box_left_versionString">
-                    1.3.0
-                </div>
-                <div class="box_left_versionString package_description orangeborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full orange orangebackgroundlight">
-                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
-                <div class="box_left_versionString">
-                    1.2.1
-                </div>
-                <div class="box_left_versionString package_description orangeborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full orange orangebackgroundlight">
-                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
-                <div class="box_left_versionString">
-                    1.2.0
+                    1.1.1
                 </div>
                 <div class="box_left_versionString package_description orangeborderlight">
                     <ul>
@@ -171,11 +63,55 @@
             <div class="box_full orange orangebackgroundlight">
                 <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
                 <div class="box_left_versionString">
-                    1.0.0
+                    1.0.3
                 </div>
                 <div class="box_left_versionString package_description orangeborderlight">
                     <ul>
                         <li>TODO</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full orange orangebackgroundlight">
+                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_left_versionString">
+                    1.0.2
+                </div>
+                <div class="box_left_versionString package_description orangeborderlight">
+                    <ul>
+                        <li>TODO</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full orange orangebackgroundlight">
+                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_left_versionString">
+                    1.0.1
+                </div>
+                <div class="box_left_versionString package_description orangeborderlight">
+                    <ul>
+                        <li>Modify GIT_HASH to match release conventions</li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full orange orangebackgroundlight">
+                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_left_versionString">
+                    1.0.0
+                </div>
+                <div class="box_left_versionString package_description orangeborderlight">
+                    <ul>
+                        <li>Initial release of spotx-nosdk-controller.</li>
                     </ul>
                 </div>
             </div>
