--- a/website/spotx-sdk-avplayer/index.html
+++ b/website/spotx-sdk-avplayer/index.html
@@ -27,7 +27,31 @@
             <div class="box_full bluegreen bluegreenbackgroundlight bold">
                 <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
-                    2.0.3
+                    1.6.0
+                </div>
+                <div class="box_left_versionString package_description bluegreenborderlight">
+                    <ul>
+                        <li>VMAP Feature Release</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full bluegreen bluegreenbackgroundlight">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
+                <div class="box_left_versionString">
+                    1.5.3
+                </div>
+                <div class="box_left_versionString package_description bluegreenborderlight">
+                    <ul>
+                        <li>Fix KVP Issues - allow key:array KVPs.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full bluegreen bluegreenbackgroundlight">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
+                <div class="box_left_versionString">
+                    1.5.2
                 </div>
                 <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
@@ -39,31 +63,7 @@
             <div class="box_full bluegreen bluegreenbackgroundlight">
                 <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
-                    2.0.2
-                </div>
-                <div class="box_left_versionString package_description bluegreenborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full bluegreen bluegreenbackgroundlight">
-                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
-                <div class="box_left_versionString">
-                    2.0.1
-                </div>
-                <div class="box_left_versionString package_description bluegreenborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full bluegreen bluegreenbackgroundlight">
-                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
-                <div class="box_left_versionString">
-                    2.0.0
+                    1.5.1
                 </div>
                 <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
@@ -87,7 +87,7 @@
             <div class="box_full bluegreen bluegreenbackgroundlight">
                 <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
-                    1.4.1
+                    1.4.0
                 </div>
                 <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
@@ -99,7 +99,7 @@
             <div class="box_full bluegreen bluegreenbackgroundlight">
                 <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
-                    1.4.0
+                    1.3.2
                 </div>
                 <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
@@ -124,18 +124,6 @@
                 <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
                     1.3.0
-                </div>
-                <div class="box_left_versionString package_description bluegreenborderlight">
-                    <ul>
-                        <li>TODO</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="box_full bluegreen bluegreenbackgroundlight">
-                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
-                <div class="box_left_versionString">
-                    1.2.1
                 </div>
                 <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
